# artifacts/api-server/src/routes/index.ts
@@ -2,11 +2,13 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import contactsRouter from "./contacts";
 import campaignsRouter from "./campaigns";
+import resourcesRouter from "./resources";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(contactsRouter);
 router.use(campaignsRouter);
+router.use(resourcesRouter);
 
 export default router;
